src/test/deca/syntax/valid/parser/test_print2.deca
// Utilisation char de print;

// Date: 20.01.2022

{
char c = "a";
println (c);
}