src/test/deca/syntax/invalid/parser/include_inreadable.deca
// Cet include n'est pas lisible

// Date: 20.01.2022

#include "../../lexer/symboles-inexistants.lis"

{
    println("lecture difficile");
}